--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": { 
+  "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
+    "1secmail-api": "^1.1.1",
     "axios": "^1.6.5",
     "bluebird": "^2.11.0",
     "body-parser": "^1.20.2",
     "chalk": "^3.0.0",
+    "chatbox-fca-remake": "^4.1.6",
     "cheerio": "^0.22.0",
     "child_process": "^1.0.2",
     "express": "^4.18.2",
